<resources>
    <string name="app_name">RGACodeChallenge</string>
    <string name="action_settings">Settings</string>
    <string name="contact_picture_description">Contact picture</string>
    <string name="title_activity_contact_save">Save contact</string>
    <string name="save">Save</string>
    <string name="contact_hint_name">Name</string>
    <string name="contact_hint_email">E-mail</string>
    <string name="contact_hint_date">Date</string>
    <string name="contact_hint_bio">Bio</string>
    <string name="title_activity_contact_details">Contact details</string>
    <string name="contact_name_label">Name</string>
    <string name="contact_aniversary_date_label">Aniversary</string>
    <string name="bio_label">Bio</string>
    <string name="contact_email_label">E-mail</string>
</resources>
