<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.victorpettengill.rgacodechallenge.view.ContactDetailsActivity"
    tools:showIn="@layout/activity_contact_details">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_collapseMode="parallax"
            android:layout_centerInParent="true"
            android:id="@+id/image"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/image_background_big"
            android:src="@drawable/ic_user_placeholder_big"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_label"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/image"
            android:text="@string/contact_name_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_name"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            tools:targetApi="jelly_bean" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_label"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/contact_name"
            android:text="@string/contact_email_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_email"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            tools:targetApi="jelly_bean" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/born_label"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/contact_email"
            android:text="@string/contact_aniversary_date_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_born"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/born_label"
            tools:targetApi="jelly_bean" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bio_label"
            android:layout_marginTop="@dimen/fab_margin"
            app:layout_constraintTop_toBottomOf="@+id/contact_born"
            android:text="@string/bio_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_bio"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@+id/bio_label"
            tools:targetApi="jelly_bean" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
